src/Native/SlangNative.h

    //Diagnostics
    extern "C" SLANGNATIVE_API const char* SlangNative_GetLastError();
    // Session API
    extern "C" SLANGNATIVE_API void* Session_Create(
        void* options, int optionsLength,
        void* macros, int macrosLength,
        void* models, int modelsLength,
        char* searchPaths[], int searchPathsLength);
    extern "C" SLANGNATIVE_API void Session_Release(void* session);
    extern "C" SLANGNATIVE_API void Module_Release(void* module);
    extern "C" SLANGNATIVE_API void* Module_FindEntryPoint(void* parentModule, const char* entryPointName);
    extern "C" SLANGNATIVE_API void Module_GetParameterInfo(void* parentEntryPoint, void** outParameterInfo, int* outParameterCount);
    // Program API
    extern "C" SLANGNATIVE_API void* Program_Create(void* parentModule);
    extern "C" SLANGNATIVE_API void Program_Release(void* program);
    // ShaderReflection API
    extern "C" SLANGNATIVE_API void ShaderReflection_Release(void* shaderReflection);
    extern "C" SLANGNATIVE_API void* ShaderReflection_GetParent(void* shaderReflection);
    extern "C" SLANGNATIVE_API void* ShaderReflection_GetNative(void* shaderReflection);
    extern "C" SLANGNATIVE_API unsigned int ShaderReflection_GetParameterCount(void* shaderReflection);
    extern "C" SLANGNATIVE_API unsigned int ShaderReflection_GetTypeParameterCount(void* shaderReflection);
    extern "C" SLANGNATIVE_API void* ShaderReflection_GetTypeParameterByIndex(void* shaderReflection, unsigned int index);
    extern "C" SLANGNATIVE_API void* ShaderReflection_FindTypeParameter(void* shaderReflection, const char* name);
    extern "C" SLANGNATIVE_API void* ShaderReflection_GetParameterByIndex(void* shaderReflection, unsigned int index);
    extern "C" SLANGNATIVE_API unsigned int ShaderReflection_GetEntryPointCount(void* shaderReflection);
    extern "C" SLANGNATIVE_API void* ShaderReflection_GetEntryPointByIndex(void* shaderReflection, unsigned int index);
    extern "C" SLANGNATIVE_API void* ShaderReflection_FindEntryPointByName(void* shaderReflection, const char* name);
    extern "C" SLANGNATIVE_API unsigned int ShaderReflection_GetGlobalConstantBufferBinding(void* shaderReflection);
    extern "C" SLANGNATIVE_API size_t ShaderReflection_GetGlobalConstantBufferSize(void* shaderReflection);
    extern "C" SLANGNATIVE_API void* ShaderReflection_FindTypeByName(void* shaderReflection, const char* name);
    
    extern "C" SLANGNATIVE_API void* ShaderReflection_FindFunctionByName(void* shaderReflection, const char* name);
    extern "C" SLANGNATIVE_API void* ShaderReflection_FindFunctionByNameInType(void* shaderReflection, void* type, const char* name);
    extern "C" SLANGNATIVE_API void* ShaderReflection_FindVarByNameInType(void* shaderReflection, void* type, const char* name);
    extern "C" SLANGNATIVE_API void* ShaderReflection_GetTypeLayout(void* shaderReflection, void* type, int layoutRules);
    extern "C" SLANGNATIVE_API void* ShaderReflection_SpecializeType(void* shaderReflection, void* type, int argCount, void** args);
    extern "C" SLANGNATIVE_API bool ShaderReflection_IsSubType(void* shaderReflection, void* subType, void* superType);
    extern "C" SLANGNATIVE_API unsigned int ShaderReflection_GetHashedStringCount(void* shaderReflection);
    extern "C" SLANGNATIVE_API const char* ShaderReflection_GetHashedString(void* shaderReflection, unsigned int index);
    extern "C" SLANGNATIVE_API void* ShaderReflection_GetGlobalParamsTypeLayout(void* shaderReflection);
    extern "C" SLANGNATIVE_API void* ShaderReflection_GetGlobalParamsVarLayout(void* shaderReflection);
    extern "C" SLANGNATIVE_API int ShaderReflection_ToJson(void* shaderReflection, const char** output);
    // TypeReflection API
    extern "C" SLANGNATIVE_API void TypeReflection_Release(void* typeReflection);
    extern "C" SLANGNATIVE_API void* TypeReflection_GetNative(void* typeReflection);
    extern "C" SLANGNATIVE_API int TypeReflection_GetKind(void* typeReflection);
    extern "C" SLANGNATIVE_API unsigned int TypeReflection_GetFieldCount(void* typeReflection);
    extern "C" SLANGNATIVE_API void* TypeReflection_GetFieldByIndex(void* typeReflection, unsigned int index);
    extern "C" SLANGNATIVE_API bool TypeReflection_IsArray(void* typeReflection);
    extern "C" SLANGNATIVE_API void* TypeReflection_UnwrapArray(void* typeReflection);
    extern "C" SLANGNATIVE_API size_t TypeReflection_GetElementCount(void* typeReflection);
    extern "C" SLANGNATIVE_API void* TypeReflection_GetElementType(void* typeReflection);
    extern "C" SLANGNATIVE_API unsigned int TypeReflection_GetRowCount(void* typeReflection);
    extern "C" SLANGNATIVE_API unsigned int TypeReflection_GetColumnCount(void* typeReflection);
    extern "C" SLANGNATIVE_API int TypeReflection_GetScalarType(void* typeReflection);
    extern "C" SLANGNATIVE_API void* TypeReflection_GetResourceResultType(void* typeReflection);
    extern "C" SLANGNATIVE_API int TypeReflection_GetResourceShape(void* typeReflection);
    extern "C" SLANGNATIVE_API int TypeReflection_GetResourceAccess(void* typeReflection);
    extern "C" SLANGNATIVE_API const char* TypeReflection_GetName(void* typeReflection);
    extern "C" SLANGNATIVE_API unsigned int TypeReflection_GetUserAttributeCount(void* typeReflection);
    extern "C" SLANGNATIVE_API void* TypeReflection_GetUserAttributeByIndex(void* typeReflection, unsigned int index);
    extern "C" SLANGNATIVE_API void* TypeReflection_FindAttributeByName(void* typeReflection, const char* name);
    extern "C" SLANGNATIVE_API void* TypeReflection_ApplySpecializations(void* typeReflection, void* genRef);
    extern "C" SLANGNATIVE_API void* TypeReflection_GetGenericContainer(void* typeReflection);
    // TypeLayoutReflection API
    extern "C" SLANGNATIVE_API void TypeLayoutReflection_Release(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API void* TypeLayoutReflection_GetNative(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API void* TypeLayoutReflection_GetType(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API int TypeLayoutReflection_GetKind(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API size_t TypeLayoutReflection_GetSize(void* typeLayoutReflection, int category);
    extern "C" SLANGNATIVE_API size_t TypeLayoutReflection_GetStride(void* typeLayoutReflection, int category);
    extern "C" SLANGNATIVE_API int TypeLayoutReflection_GetAlignment(void* typeLayoutReflection, int category);
    extern "C" SLANGNATIVE_API unsigned int TypeLayoutReflection_GetFieldCount(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API void* TypeLayoutReflection_GetFieldByIndex(void* typeLayoutReflection, unsigned int index);
    extern "C" SLANGNATIVE_API int TypeLayoutReflection_FindFieldIndexByName(void* typeLayoutReflection, const char* name);
    extern "C" SLANGNATIVE_API void* TypeLayoutReflection_GetExplicitCounter(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API bool TypeLayoutReflection_IsArray(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API void* TypeLayoutReflection_UnwrapArray(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API size_t TypeLayoutReflection_GetElementCount(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API size_t TypeLayoutReflection_GetTotalArrayElementCount(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API size_t TypeLayoutReflection_GetElementStride(void* typeLayoutReflection, int category);
    extern "C" SLANGNATIVE_API void* TypeLayoutReflection_GetElementTypeLayout(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API void* TypeLayoutReflection_GetElementVarLayout(void* typeLayoutReflection);
    extern "C" SLANGNATIVE_API void* TypeLayoutReflection_GetContainerVarLayout(void* typeLayoutReflection);
    // VariableReflection API
    extern "C" SLANGNATIVE_API void VariableReflection_Release(void* variableReflection);
    extern "C" SLANGNATIVE_API void* VariableReflection_GetNative(void* variableReflection);
    extern "C" SLANGNATIVE_API const char* VariableReflection_GetName(void* variableReflection);
    extern "C" SLANGNATIVE_API void* VariableReflection_GetType(void* variableReflection);