src/Slang.Sdk/Layer1-Interop/SlangNativeInterop.cs

using System.Runtime.InteropServices;

namespace Slang.Sdk.Interop;

/// <summary>
/// P/Invoke declarations for SlangNative.dll functions.
/// These provide direct access to the native Slang functionality.
/// </summary>
internal static unsafe partial class SlangNativeInterop
{
    private const string LibraryName = "SlangNative";

    #region Diagnostics

    [LibraryImport(LibraryName)]
    internal static partial char* SlangNative_GetLastError();

    #endregion

    #region Session API

    [LibraryImport(LibraryName)]
    internal static partial nint Session_Create(
        void* options, int optionsLength,
        void* macros, int macrosLength,
        void* models, int modelsLength,
        char*[] searchPaths, int searchPathsLength);

    [LibraryImport(LibraryName)]
    internal static partial void Session_Release(nint session);

    #endregion

    #region Module API

    [LibraryImport(LibraryName)]
    internal static partial nint CreateModule(
        nint parentSession, 
        char* moduleName,
        char* modulePath,
        char* shaderSource);

    [LibraryImport(LibraryName)]
    internal static partial void Module_Release(nint module);

    [LibraryImport(LibraryName)]
    internal static partial nint Module_FindEntryPoint(
        nint parentModule, 
        byte* entryPointName);

    [LibraryImport(LibraryName)]
    internal static partial void Module_GetParameterInfo(
        nint parentEntryPoint, 
        void** outParameterInfo, 
        int* outParameterCount);

    #endregion

    #region Program API

    [LibraryImport(LibraryName)]
    internal static partial nint Program_Create(nint parentModule);

    [LibraryImport(LibraryName)]
    internal static partial void Program_Release(nint program);

    [LibraryImport(LibraryName)]
    internal static partial SlangResult CompileProgram(
        nint program,
        uint entryPointIndex,
        uint targetIndex,
        char** output);

    [LibraryImport(LibraryName)]
    internal static partial nint GetProgramReflection(
        nint program, 
        uint targetIndex);

    #endregion

    #region ShaderReflection API

    [LibraryImport(LibraryName)]
    internal static partial void ShaderReflection_Release(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_GetParent(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_GetNative(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint ShaderReflection_GetParameterCount(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint ShaderReflection_GetTypeParameterCount(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_GetTypeParameterByIndex(
        nint shaderReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_FindTypeParameter(
        nint shaderReflection, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_GetParameterByIndex(
        nint shaderReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial uint ShaderReflection_GetEntryPointCount(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_GetEntryPointByIndex(
        nint shaderReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_FindEntryPointByName(
        nint shaderReflection, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial uint ShaderReflection_GetGlobalConstantBufferBinding(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial nuint ShaderReflection_GetGlobalConstantBufferSize(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_FindTypeByName(
        nint shaderReflection, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_FindFunctionByName(
        nint shaderReflection, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_FindFunctionByNameInType(
        nint shaderReflection, 
        nint type, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_FindVarByNameInType(
        nint shaderReflection, 
        nint type, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_GetTypeLayout(
        nint shaderReflection, 
        nint type, 
        int layoutRules);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_SpecializeType(
        nint shaderReflection, 
        nint type, 
        int argCount, 
        void** args);

    [LibraryImport(LibraryName)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static partial bool ShaderReflection_IsSubType(
        nint shaderReflection, 
        nint subType, 
        nint superType);

    [LibraryImport(LibraryName)]
    internal static partial uint ShaderReflection_GetHashedStringCount(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* ShaderReflection_GetHashedString(
        nint shaderReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_GetGlobalParamsTypeLayout(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint ShaderReflection_GetGlobalParamsVarLayout(nint shaderReflection);

    [LibraryImport(LibraryName)]
    internal static partial int ShaderReflection_ToJson(
        nint shaderReflection, 
        byte** output);

    #endregion

    #region TypeReflection API

    [LibraryImport(LibraryName)]
    internal static partial void TypeReflection_Release(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeReflection_GetNative(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial int TypeReflection_GetKind(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint TypeReflection_GetFieldCount(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeReflection_GetFieldByIndex(
        nint typeReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static partial bool TypeReflection_IsArray(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeReflection_UnwrapArray(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial nuint TypeReflection_GetElementCount(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeReflection_GetElementType(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint TypeReflection_GetRowCount(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint TypeReflection_GetColumnCount(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial int TypeReflection_GetScalarType(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeReflection_GetResourceResultType(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial int TypeReflection_GetResourceShape(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial int TypeReflection_GetResourceAccess(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* TypeReflection_GetName(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint TypeReflection_GetUserAttributeCount(nint typeReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeReflection_GetUserAttributeByIndex(
        nint typeReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeReflection_FindAttributeByName(
        nint typeReflection, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeReflection_ApplySpecializations(
        nint typeReflection, 
        nint genRef);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeReflection_GetGenericContainer(nint typeReflection);

    #endregion

    #region TypeLayoutReflection API

    [LibraryImport(LibraryName)]
    internal static partial void TypeLayoutReflection_Release(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeLayoutReflection_GetNative(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeLayoutReflection_GetType(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial int TypeLayoutReflection_GetKind(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nuint TypeLayoutReflection_GetSize(
        nint typeLayoutReflection, 
        int category);

    [LibraryImport(LibraryName)]
    internal static partial nuint TypeLayoutReflection_GetStride(
        nint typeLayoutReflection, 
        int category);

    [LibraryImport(LibraryName)]
    internal static partial int TypeLayoutReflection_GetAlignment(
        nint typeLayoutReflection, 
        int category);

    [LibraryImport(LibraryName)]
    internal static partial uint TypeLayoutReflection_GetFieldCount(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeLayoutReflection_GetFieldByIndex(
        nint typeLayoutReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial int TypeLayoutReflection_FindFieldIndexByName(
        nint typeLayoutReflection, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeLayoutReflection_GetExplicitCounter(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static partial bool TypeLayoutReflection_IsArray(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeLayoutReflection_UnwrapArray(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nuint TypeLayoutReflection_GetElementCount(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nuint TypeLayoutReflection_GetTotalArrayElementCount(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nuint TypeLayoutReflection_GetElementStride(
        nint typeLayoutReflection, 
        int category);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeLayoutReflection_GetElementTypeLayout(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeLayoutReflection_GetElementVarLayout(nint typeLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeLayoutReflection_GetContainerVarLayout(nint typeLayoutReflection);

    #endregion

    #region VariableReflection API

    [LibraryImport(LibraryName)]
    internal static partial void VariableReflection_Release(nint variableReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableReflection_GetNative(nint variableReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* VariableReflection_GetName(nint variableReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableReflection_GetType(nint variableReflection);
